--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles/styles.css" />
-    <title>welcome</title>
+    <link rel="stylesheet" href="./Style/styles.css" />
+    <title>welcome to dark</title>
   </head>
   <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-      <a href="/" class="navbar__logo"> <b> POLUTION </b></a>
-      <div class="navbar__bars"><i class="fas fa-bars"></i></div>
+      <a href="/" class="navbar__logo"> <b> THE UNKNOWN </b></a>
+      <div class="navbar__bars"><i class="fas fa-bars">View</i></div>
       <div class="navbar__menu">
         <a href="/" class="navbar__menu--links">Home</a>
-        <a href="/" class="navbar__menu--links" id="button">Sign Up</a>
+        <a href="/" class="navbar__menu--links" id="button">About</a>
       </div>
     </nav>
 
@@ -31,13 +31,13 @@
         <div class="hero__container--left">
           <h1>They are coming</h1>
           <h2>Be Prepared</h2>
-          <p>Sign up now to join the list.</p>
-          <button class="hero__container--btn"><a href="#">Sign Up</a></button>
+          <p>Vote now to join the community.</p>
+          <button class="hero__container--btn" id="voteme"><a href="#">VOTE</a></button>
         </div>
         <div class="hero__container--right">
         
-          <img
-            src="images/polution.webp"
+          <img style="height: 400px; width:300px"
+            src="./Img/iamhere.webp"
             alt="poluted environment"
             class="hero__container--img"
           />
